--- a/package.json
+++ b/package.json
@@ -36,9 +36,15 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "aspect-ratio": "^2.1.5",
+    "autoprefixer": "^10.4.19",
     "browser-sync": "^2.29.1",
     "concurrently": "^8.0.1",
+    "forms": "^1.3.2",
+    "line-clamp": "^1.0.0",
     "nodemon": "^2.0.22",
-    "tailwindcss": "^3.3.2"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typography": "^0.16.24"
   }
 }
