--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
     "mongodb": "^5.4.0",
     "mongoose": "^7.1.0",
