--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "aspect-ratio": "^2.1.5",
